# SDL-OpenGL-With-GLAD-Demo

./: CMakeLists.txt  README.md  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  main.cpp  vcpkg.json
glad/include/glad/: gl.h
shaders/: frag-grad.glsl  frag.glsl  vert.glsl  vert2.glsl
